--- a/package.json
+++ b/package.json
@@ -29,14 +29,20 @@
     "@mui/material": "^5.14.20",
     "@mui/system": "^5.14.20",
     "@mui/x-date-pickers": "^6.18.4",
+    "@prisma/client": "^5.19.1",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.16",
     "google-map-react": "^2.2.1",
+    "jsonwebtoken": "^9.0.2",
     "lodash.isequal": "^4.5.0",
     "lodash.merge": "^4.6.2",
     "mui-one-time-password-input": "^2.0.1",
     "next": "^14.0.4",
     "nprogress": "^0.2.0",
+    "prisma": "^5.19.1",
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
