Added auth flow

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "next dev -p 8002",
     "start": "next start -p 8002",
-    "build": "next build",
+    "build": "next build && npx prisma generate",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
     "prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
@@ -17,7 +17,8 @@
     "re:build-npm": "npm run rm:all && npm install && npm run build",
     "dev:ts": "yarn dev & yarn ts:watch",
     "ts": "tsc --noEmit --incremental",
-    "ts:watch": "yarn ts --watch"
+    "ts:watch": "yarn ts --watch",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@emotion/cache": "^11.11.0",
@@ -32,8 +33,10 @@
     "@prisma/client": "^5.19.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.7",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.13",
     "framer-motion": "^10.16.16",
     "google-map-react": "^2.2.1",
     "jsonwebtoken": "^9.0.2",
@@ -43,12 +46,14 @@
     "next": "^14.0.4",
     "nprogress": "^0.2.0",
     "prisma": "^5.19.1",
+    "quill": "^2.0.2",
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-lazy-load-image-component": "^1.6.0",
     "react-player": "^2.13.0",
+    "react-quill": "^2.0.0",
     "react-slick": "^0.30.2",
     "simplebar-react": "^3.2.4",
     "slick-carousel": "^1.8.1",
