--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
   },
   "dependencies": {
     "@emotion/cache": "^11.11.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.3.2",
     "@iconify/react": "^4.1.1",
+    "@mui/icons-material": "^6.1.4",
     "@mui/lab": "^5.0.0-alpha.155",
-    "@mui/material": "^5.14.20",
+    "@mui/material": "^6.1.4",
     "@mui/system": "^5.14.20",
     "@mui/x-date-pickers": "^6.18.4",
     "@prisma/client": "^5.19.1",
@@ -55,6 +56,7 @@
     "react-player": "^2.13.0",
     "react-quill": "^2.0.0",
     "react-slick": "^0.30.2",
+    "react-transition-group": "^4.4.5",
     "simplebar-react": "^3.2.4",
     "slick-carousel": "^1.8.1",
     "stylis": "^4.3.0",
