--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.13",
+    "firebase": "^11.0.1",
     "framer-motion": "^10.16.16",
     "google-map-react": "^2.2.1",
     "jsonwebtoken": "^9.0.2",
