--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "firebase": "^11.0.1",
     "framer-motion": "^10.16.16",
     "google-map-react": "^2.2.1",
+    "html-react-parser": "^5.1.18",
     "jsonwebtoken": "^9.0.2",
     "lodash.isequal": "^4.5.0",
     "lodash.merge": "^4.6.2",
